5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1798_2565.log
== TEST (2019-06-10 14:30:38) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(i, dtype=int)
for i in range(size(media)):
	if(media>=5 and presenca>=(75/100)):
		cont[0]=1+cont[0]
	elif(media>=5 and presenca<(75/100)):
		cont[1]=1+cont[1]
	elif(media<5 and presenca>=(75/100)):
		cont[2]=1+cont[2]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:33:25) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(i, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[í]>=5 and presenca[i]<(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]<5 and presenca[i]>=(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:33:36) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(i, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[í]>=5 and presenca[i]<(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]<5 and presenca[i]>=(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:33:37) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(i, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[í]>=5 and presenca[i]<(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]<5 and presenca[i]>=(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:34:52) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(3, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[í]>=5 and presenca[i]<(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]<5 and presenca[i]>=(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:34:59) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(3, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[í]>=5 and presenca[i]<(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]<5 and presenca[i]>=(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- EXECUTION TIME:
1.13856
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2565/main.py", line 9, in <module>
    elif(media[\xed]>=5 and presenca[i]<(75/100)*carga):
NameError: name '\xed' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:35:22) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(3, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[í]>=5 and presenca[i]<(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]<5 and presenca[i]>=(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:36:27) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(3, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[i]>=5 and presenca[i]<(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]<5 and presenca[i]>=(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:36:34) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(3, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[i]>=5 and presenca[i]<(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]<5 and presenca[i]>=(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- EXECUTION TIME:
1.15587
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 3 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 2 0]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 4 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:37:05) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(3, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[i]>=5 and presenca[i]<(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]<5 and presenca[i]>=(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- EXECUTION TIME:
1.05301
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 3 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 2 0]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 4 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:38:46) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(3, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[i]<5 and presenca[i]>(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]>5 and presenca[i]<(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:39:08) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(3, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[i]<5 and presenca[i]>(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]>5 and presenca[i]<(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:39:11) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(3, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[i]<5 and presenca[i]>(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]>5 and presenca[i]<(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- EXECUTION TIME:
0.991128
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:39:15) 
-- CODE:
from numpy import*
media=array(eval(input("medias:")))
presenca=array(eval(input("numero de ")))
carga=int(input("carga horaria da disciplina:"))
cont=zeros(3, dtype=int)
for i in range(size(media)):
	if(media[i]>=5 and presenca[i]>=(75/100)*carga):
		cont[0]=1+cont[0]
	elif(media[i]<5 and presenca[i]>(75/100)*carga):
		cont[1]=1+cont[1]
	elif(media[i]>5 and presenca[i]<(75/100)*carga):
		cont[2]=1+cont[2]
print(cont)
-- EXECUTION TIME:
1.10378
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
